syntax = "proto3";

option java_multiple_files=true;
option java_package="org.distributed";
option java_outer_classname="EmployeeProto";
import "google/protobuf/timestamp.proto";
package com.grpc;

message Employee {
  int32                     id = 1;
  string                    name = 2;
  double                    salary = 3;
  repeated Department       department = 4;
  map<string, string>       addressMap = 5;
  bool                      isActive = 6;
  bytes                     profilePicture = 7;
  google.protobuf.Timestamp joinDate = 8;
}

message Department {
  int32   id = 1;
  string  name = 2;
}

message Empty {

}

message EmployeeList {
  repeated Employee employees=1;
}

// similar to interface in Java
service EmployeeService {

  // rpc methodName(messageType1) returns (messageType2); // We always have to pass messageType1, and messageType2

  rpc getEmployee(Employee) returns (Employee);
  rpc addEmployee(Employee) returns (Employee);
  rpc getAllEmployees(Empty) returns (EmployeeList);
}